# pc-monitoring

./: .gitignore  README.md  make.toml
embedded/: Cargo.toml
embedded/.cargo/: config.toml
embedded/src/: adc.rs  lib.rs
embedded/tests/: integration.rs
host/: Cargo.toml
host/src/: main.rs
host/systemd/: pc-monitoring.service
lib/: Cargo.toml
lib/src/: lib.rs  temperature.rs
