[package]
name = "pc-monitoring-lib"
authors = ["DerFetzer <kontakt@der-fetzer.de>"]
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
std = []

[dependencies]
serde = { version = "1.0", default-features = false }
postcard = "0.7.3"
heapless = "0.7.10"

[dev-dependencies]
approx = "0.5.1"
